feat : 공급자 또는 공급받는자로 검색 로직 구현 #45